# energy-predictor

./: .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt
energy_predictor/: data_loader.py  evaluation.py  main.py  models.py  preprocessing.py
energy_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
energy_predictor/energy_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
energy_predictor/your_project_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
