[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-predictor"
version = "0.1.0"
description = "A tool to predict city-level energy consumption using temporal and weather data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Arden McArthur", email = "amcar036@uOttawa.ca" }
]

dependencies = [
    "numpy>=1.24",
    "pandas",
    "scikit-learn",
    "matplotlib"
]

[project.scripts]
energy-predict = "energy_predictor.main:main"
